Fix overflow issue (revert scroll hack)

--- a/web-app/src/index.css
+++ b/web-app/src/index.css
@@ -1,3 +1,14 @@
+html,
+body,
+#root,
+#root > div {
+	height: 100%;
+}
+
+#root {
+  overflow: hidden;
+}
+
 body {
   margin: 0px;
 }
